<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.david.entourage.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/estab_spinner"
        android:layout_width="262dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/estab_textView"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/radius_seekBar"
        android:layout_width="268dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radius_textView"
        app:layout_constraintTop_toBottomOf="@+id/estab_spinner" />

    <TextView
        android:id="@+id/estab_textView"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:text="@string/Establishment"
        android:textAlignment="viewEnd"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/radius_textView"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="12dp"
        android:gravity="end"
        android:text="@string/Radius"
        android:textAlignment="viewEnd"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estab_textView" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="85dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="178dp"
        android:layout_height="37dp"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="16dp"
        android:text="@string/search"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
